Fix style issue showing a scrollbar when it's not necessary

--- a/assets/styles/profile.css
+++ b/assets/styles/profile.css
@@ -32,11 +32,6 @@
 }
 
 @media (min-width: 768px) {
-  .profile-card-wrapper .card {
-    max-height: 100%;
-    overflow-y: scroll;
-  }
-
   .social-profiles .profile-item a {
     padding: 5px;
     text-align: center;
